# walisongo_guardian-master

./: .gitignore  DEPLOYMENT_READY.md  Makefile  README.md  SERVER_CLIENT_INTEGRATION.md  main.cpp
client/: Cargo.toml
client/src/: main.rs
core/: active.cpp  active.h  config.cpp  config.h  encryption.cpp  encryption.h  globals.cpp  globals.h  keylogger.cpp  keylogger.h  network_gate.cpp  network_gate.h  persistence.cpp  persistence.h  system_monitor.cpp  system_monitor.h  transmission.cpp  transmission.h  updater.cpp  updater.h  utils.cpp  utils.h  wifi_filter.cpp  wifi_filter.h
permits/: Cargo.toml  Makefile  app.manifest  build.rs
permits/src/: main.rs
permits/src/config/: config.rs
remover/: Cargo.toml
remover/src/: main.rs
server/: .env.example  Cargo.toml  Dockerfile  FEATURES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  QUICK_START.md  README.md  docker-compose.yml  openapi.yaml  server-utils.sh  walisongo-guardian.service
server/src/: main.rs
